# repo-jules-command

./: App.tsx  README.md  index.html  metadata.json  package.json  types.ts
command-center/: AGENTS.md  package-lock.json  package.json  pnpm-lock.yaml
command-center/src/: App.tsx  constants.ts  types.ts
command-center/src-tauri/: Cargo.toml  tauri.conf.json
command-center/src-tauri/capabilities/: mobile.json  opener.json
command-center/src-tauri/src/: auth.rs  github.rs  jules.rs  lib.rs  remote_engine.rs  scaffold_engine.rs  ssh_utils.rs  types.rs  uplink_engine.rs
command-center/src/components/Dashboard/: Dashboard.tsx  JobCard.tsx
command-center/src/components/Generators/: GeneratorGrid.tsx
command-center/src/components/Shared/: ContextEditor.tsx
command-center/src/components/Wizards/: RemoteWizard.tsx  ScaffoldWizard.tsx  UplinkWizard.tsx
command-center/src/context/: JobContext.tsx
command-center/src/services/: mockService.ts  tauriService.ts
components/Dashboard/: Dashboard.tsx  JobCard.tsx
components/Shared/: ContextEditor.tsx
components/Wizards/: ScaffoldWizard.tsx  UplinkWizard.tsx
context/: JobContext.tsx
services/: mockService.ts
