[package]
name = "command-center"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "command_center_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
ssh2 = "0.9"
tokio = { version = "1", features = ["full"] }
tauri-plugin-store = "2.0.0"
rand = "0.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
